@@ -382,7 +382,7 @@ class MicrotonalUI {: {private MiscFuncs}
   Function {send_data(int action, int control, float value, int type, int par = UNUSED, int miscmsg = UNUSED)} {} {
     code {//
         type |= TOPLEVEL::type::Write;
-        collect_data(synth, value, action, (Fl::event_button() | type), control, TOPLEVEL::section::scales, UNUSED, UNUSED, UNUSED, par, miscmsg);} {}
+        collect_data(synth, value, action, (Fl::event_button() | type), control, TOPLEVEL::section::scales, UNUSED, UNUSED, UNUSED, par, UNUSED, miscmsg);} {}
   }
   Function {fetchData(float value, int control, int part, int kititem = UNUSED, int engine = UNUSED, int insert = UNUSED, int parameter = UNUSED, int miscmsg = UNUSED, int request = UNUSED)} {return_type float
   } {
