@@ -2,6 +2,7 @@ yoshimi 1.5.11 M
 
 2019-7-28 Will
 * GUI offset added to collect_readData.
+* GUI offset added to collect_data.
 
 2019-7-28 Will
 * Copy-paste cleanups.
